<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CockTails</string>

    <string name="NameDrink" translatable="false">Name Of Drink</string>
    <string name="Category" translatable="false">Category</string>
    <string name="instruction" translatable="false">Instructions</string>
    <string name="AddTheDrink" translatable="false">Add Drink</string>
    <string name="loginNo" translatable="false">Login Not SuccessFull</string>
    <string name="Register" translatable="false">Registered Successfully</string>
    <string name="searchAny" translatable="false">Search For Drink Here</string>
    <string name="help_toast" translatable="false">Help Fragment</string>
    <string name="Cocktail" translatable="false">Welcome to Cocktail App</string>
    <string name="activity_list_title">Title</string>


    <string name="Drink">Enter the Drink</string>
    <string name="ingredients">Enter the ingredients</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="home_main">Home</string>

    <string name="activity_list_cat">Category</string>
    <string name="more_main">more</string>
    <string name="login_main">Login</string>
    <string name="register_main">register</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popup">question:</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="toast_message">Item Added SuccessFully</string>
    <string name="toast_message2">Item not added</string>
    <string name="toast_message_del_no">Item not Deleted</string>
    <string name="toast_message_del_yes">Item deleted from List</string>
    <string name="hel" translatable="false"><string name="description">Group Project:

        This is our final project of our android, with the cocktail database. In this project we are fetching the data from the URL of the website to our program and then, adding and deleting them from our database.






    Team member: Samarth, Rantejbir and Daksh</string></string>

    <string name="prompt_email">Search...🔍</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Search</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>